--- a/indexPT.html
+++ b/indexPT.html
@@ -62,7 +62,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Electronic Dollar</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">D&oacute;LAR ELETR&#244NICO</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -86,19 +86,19 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#page-top">About</a>
+              <a class="nav-link js-scroll-trigger" href="#page-top">Sobre</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#features">Features</a>
+              <a class="nav-link js-scroll-trigger" href="#features">Caracter&Iacute;sticas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">Download</a>
+              <a class="nav-link js-scroll-trigger" href="#download">Baixar</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#community">Community</a>
+              <a class="nav-link js-scroll-trigger" href="#community">Comunidade</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#tool">Tool</a>
+              <a class="nav-link js-scroll-trigger" href="#tool">Ferramenta</a>
             </li>
           </ul>
         </div>
@@ -108,10 +108,10 @@
     <header class="masthead">
       <div class="header-content">
         <div class="header-content-inner">
-          <h1 id="homeHeading">The digital currency of the future For Every Human</h1>
+          <h1 id="homeHeading">A MOEDA DIGITAL DO FUTURO PARA TODO MUNDO</h1>
           <hr>
-          <p>Electronic Dollar (or eDollar) is a private, secure, untraceable, decentralized digital currency. You are your bank, you control your funds, and nobody can trace your transfers unless you allow them to do so.</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#features">Find Out More</a>
+          <p>O d&oacute;lar eletr&#244nico (ou eDollar) &eacute; uma moeda digital privada, segura, n&#227o rastre&aacute;vel e descentralizada. Voc&#234 &eacute; o seu banco, controla seus fundos e ningu&eacute;m pode rastrear suas transfer&#234ncias, a menos que voc&#234 permita isso.</p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#features">Descubra Mais</a>
         </div>
       </div>
     </header>
@@ -120,7 +120,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Features</h2>
+            <h2 class="section-heading">Caracter&Iacute;sticas</h2>
             <hr class="primary">
           </div>
         </div>
@@ -130,29 +130,29 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-globe text-primary sr-icons"></i>
-              <h3>Decentralized</h3>
-              <p class="text-muted align-jstify">eDollar is decentralized, trustless cryptocurrency. The whole system is operated by peer-to-peer network, Transactions are confirmed by distributed consensus, and then recorded on the blockchain immutably </p>
+              <h3>Descentralizado</h3>
+              <p class="text-muted align-jstify">O eDollar &eacute; criptomoeda descentralizada e sem confian&#231a. Todo o sistema &eacute; operado por rede peer-to-peer, Transa&#231es s&#227o confirmadas por consenso distribu&Iacute;do e, em seguida, gravadas no blockchain imutavelmente</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-lock text-primary sr-icons"></i>
-              <h3>Secure</h3>
-              <p class="text-muted align-jstify">Using the power of a distributed peer-to-peer consensus network, every transaction on the network is cryptographically secured. Wallet files are encrypted with a passphrase to ensure they are useless if stolen</p>
+              <h3>Seguro</h3>
+              <p class="text-muted align-jstify">Usando o poder de uma rede de consenso peer-to-peer distribu&Iacute;da, todas as transa&#231&#234es na rede s&#227o protegidas criptograficamente. Os arquivos da carteira s&#227o criptografados com uma senha para garantir que eles sejam in&uacute;teis se forem roubados</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-eye-slash text-primary sr-icons"></i>
-              <h3>Private</h3>
-              <p class="text-muted align-jstify">All transactions in eDollar are Ring Confidential Transactions (RingCT) with minimum ring size of 4. The amount of any transaction is always hidden to the public, and because blocks cannot be analyzed, without the keys no one can ever know where that money comes from</p>
+              <h3>Privado</h3>
+              <p class="text-muted align-jstify">Todas as transa&#231&#234es no eDollar s&#227o Ring Ring Confidential Transactions (RingCT) com tamanho de anel m&Iacute;nimo de 4. A quantidade de qualquer transa&#231&#227o &eacute; sempre escondida para o p&uacute;blico, e porque os blocos n&#227o podem ser analisados, sem as chaves ningu&eacute;m pode saber de onde vem esse dinheiro</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-times text-primary sr-icons"></i>
-              <h3>Untraceable</h3>
-              <p class="text-muted align-jstify">By taking advantage of ring signatures, a special property of a certain type of cryptography, eDollar is able to ensure that transactions are not only untraceable, but have an optional measure of ambiguity that ensures that transactions cannot be tied back to an individual user or computer</p>
+              <h3>N&#227o Rastre&aacute;vel</h3>
+              <p class="text-muted align-jstify">Aproveitando-se das assinaturas de anel, uma propriedade especial de um determinado tipo de criptografia, o eDollar &eacute; capaz de garantir que as transa&#231&#234es n&#227o sejam apenas imposs&Iacute;veis de rastrear, mas tenham uma medida opcional de ambiguidade que garanta que as transa&#231&#234es n&#227o possam ser vinculadas a um usu&aacute;rio individual ou computador.</p>
             </div>
           </div>
         </div>
@@ -162,11 +162,11 @@
     <section class="p-0" id="download">
       <div class="call-to-action bg-dark">
         <div class="container text-center">
-          <h2>Download GUI Wallet</h2>
-          <p>Current version 0.1.1 - The Mars</p>
+          <h2>Baixar Carteira GUI</h2>
+          <p>Vers&#227o atual 0.1.1 - Marte</p>
           <div class="row">
             <div class="col-lg-4 ml-auto text-center">
-              <p class="small-margin"><span class="fa fa-windows small-margin"></span> For Windows</p>
+              <p class="small-margin"><span class="fa fa-windows small-margin"></span> Para Windows</p>
             </div>
             <div class="col-lg-4 ml-auto text-center">
               <a class="" href="https://edollar.cash/download/[Beta-3]eDollar_GUIWallet_Setup-64bit.exe">Windows 64 bits</a>
@@ -177,35 +177,35 @@
           </div>
           <div class="row">
               <div class="col-lg-12 ml-auto text-center">
-                <p class="small-margin"><span class="fa fa-linux small-margin"></span> <span class="fa fa-apple"></span> Other platforms: <i>coming soon</i></p>
+                <p class="small-margin"><span class="fa fa-linux small-margin"></span> <span class="fa fa-apple"></span> Para Mac <i>Em breve</i></p>
               </div>
           </div>
           <br><br>
-          <h2>Download Binaries/CLI</h2>
-          <p>Current version 0.1.1 - The Mars</p>
+          <h2>Baixar bin&aacute;rios / CLI</h2>
+          <p>Vers&#227o atual 0.1.1 - Marte</p>
           <div class="row">
             <div class="col-lg-4 ml-auto text-center">
-              <p class="small-margin"><span class="fa fa-windows small-margin"></span> For Windows</p>
+              <p class="small-margin"><span class="fa fa-windows small-margin"></span> Para Windows</p>
               <a class="" href="https://edollar.cash/download/edollar-win64.zip">Windows 64 bits</a>
               <br>
               <a class="" href="https://edollar.cash/download/edollar-win32.zip">Windows 32 bits</a>
             </div>
             <div class="col-lg-4 ml-auto text-center">
-              <p class="small-margin"><span class="fa fa-linux small-margin"></span> For Linux</p>
+              <p class="small-margin"><span class="fa fa-linux small-margin"></span> Para Linux</p>
               <a class="" href="https://edollar.cash/download/edollar-linux64.zip">Ubuntu 64 bits</a>
             </div>
             <div class="col-lg-4 ml-auto text-center">
               <p class="small-margin"><span class="fa fa-apple"></span> For Mac</p>
-              <a class="" href="https://edollar.cash/download/edollar-mac">Coming soon</a>
+              <a class="" href="https://edollar.cash/download/edollar-mac">Em breve</a>
               </div>
           </div>
-          <h2 style="margin-top: 50px">Source code and White papers</h2>
+          <h2 style="margin-top: 50px">C&oacute;digo-fonte e Papel Branco</h2>
           <div class="row">
             <div class="col-lg-6 ml-auto">
-              <span class="fa fa-github"></span> Source code: <a class="" target="_blank" href="https://github.com/edollar-project/edollar"> From Github</a>
+              <span class="fa fa-github"></span> C&oacute;digo-fonte: <a class="" target="_blank" href="https://github.com/edollar-project/edollar"> From Github</a>
             </div>
             <div class="col-lg-6 ml-auto">
-              <span class="fa fa-file-pdf-o"></span> White paper: <a class="" target="_blank" href="https://edollar.cash/download/EDLWPEN	.pdf"> EDL white paper</a>
+              <span class="fa fa-file-pdf-o"></span>Papel Branco <a class="" target="_blank" href="https://edollar.cash/download/EDLWPEN	.pdf"> Papel Branco  do EDL </a>
             </div>
           </div>
         </div>
@@ -216,16 +216,16 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">More about eDollar</h2>
+            <h2 class="section-heading">Mais sobre eDollar</h2>
             <hr class="primary">
-            <p>You can find more information about eDollar project via the following channels</p>
+            <p>Voc&#234 pode encontrar mais informa&#231&#234es sobre o projeto eDollar atrav&eacute;s dos seguintes canais</p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-3 mr-auto text-center">
             <i class="fa fa-question-circle-o fa-3x"></i>
             <p>
-		<a target="_blank" href="rpc_guide.html">RPC Guide</a>
+		<a target="_blank" href="rpc_guide.html">Guia de RPC</a>
             </p>
           </div>
           <div class="col-lg-3 ml-auto text-center">
@@ -237,7 +237,8 @@
           <div class="col-lg-3 mr-auto text-center">
             <i class="fa fa-btc fa-3x"></i>
             <p>
-              <a target="_blank" href="https://bitcointalk.org/index.php?topic=2643196.0">Bitcoin talk</a>
+              <a target="_blank" href="https://bitcointalk.org/index.php?topic=2643196.0">
+Conversa de Bitcoin</a>
             </p>
           </div>
           <div class="col-lg-3 mr-auto text-center">
@@ -253,31 +254,31 @@
   <div class="container">
     <div class="row">
         <div class="col-lg-4 text-center">
-          <i class="fa fa-anchor tool"> Mining Pool</i>
+          <i class="fa fa-anchor tool">Pool de Mineria</i>
           <p class="tool-item">
-            <a target="_blank" href="http://pool.electronicdollar.org/" class="white-color">Official pool (1)</a>
+            <a target="_blank" href="http://pool.electronicdollar.org/" class="white-color">Oficial pool (1)</a>
           </p>
           <p class="tool-item"p>
-            <a target="_blank" href="https://pool.edollar.cash" class="white-color">Official pool (2)</a>
+            <a target="_blank" href="https://pool.edollar.cash" class="white-color">Oficial pool (2)</a>
             </p>
           </p>
           <p class="tool-item">
-            <a target="_blank" href="https://pool.edollar.cash" class="white-color">Other pools</a>
+            <a target="_blank" href="https://pool.edollar.cash" class="white-color">Outros pools</a>
           </p>
         </div>
         <div class="col-lg-4 text-center">
-          <i class="fa fa-cubes tool"> Block Explorer</i>
+          <i class="fa fa-cubes tool"> Explorador de Block</i>
           <p class="tool-item">
             <a target="_blank" href="https://explorer.edollar.cash" class="white-color">https://explorer.edollar.cash</a>
           </p>
         </div>
         <div class="col-lg-4 text-center">
-            <i class="fa fa-address-card-o tool"> Generate Wallet</i>
+            <i class="fa fa-address-card-o tool"> Gere Carteira Wallet</i>
             <p class="tool-item">
-              <a target="_blank" href="https://edollar.cash/wallet_generator.html" class="white-color">Generate Online</a>
+              <a target="_blank" href="https://edollar.cash/wallet_generator.html" class="white-color">Gerar Online</a>
             </p>
             <p class="tool-item">
-                <a target="_blank" href="https://github.com/edollar-project/edollar-wallet-generator" class="white-color">Generate Offline</a>
+                <a target="_blank" href="https://github.com/edollar-project/edollar-wallet-generator" class="white-color">Gerar Offline</a>
               </p>
           </div>
     </div>
