--- a/indexSP.html
+++ b/indexSP.html
@@ -5,10 +5,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Electronic dollar | eDollar | EDL | Secure Private Crypto Currency">
+    <meta name="description" content="Electronic dollar | eDollar | EDL | Crypto Activo Seguro y Privado">
     <meta name="author" content="Electronic dollar | eDollar | EDL">
 
-    <title>Electronic Dollar Secure Private Crypto Currency EDL Coin</title>
+    <title>Electronic Dollar Crypto Activo Seguro y Privado EDL Coin</title>
     <link rel="icon" type="image/png" href="https://edollar.cash/favicon.png">
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -62,43 +62,43 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Electronic Dollar</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">D&oacute;lar Electr&oacute;nico</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
+
  <div class="row">
             <div class="col-lg-1 ml-auto text-center">
               <a class="" href="";></a> </div>
-            <div class="col-lg-2 ml-auto text-center">
+            <div class="col-lg-1 ml-auto text-center">
               <a class="" href="index.html";>EN</a> </div>
-            <div class="col-lg-2 ml-auto text-center">
+            <div class="col-lg-1 ml-auto text-center">
               <a class="" href="indexSP.html";>SP</a> </div>
-            <div class="col-lg-2 ml-auto text-center">
+            <div class="col-lg-1 ml-auto text-center">
               <a class="" href="indexPT.html">PT</a> </div>
-            <div class="col-lg-2 ml-auto text-center">
+            <div class="col-lg-1 ml-auto text-center">
               <a class="" href="indexCN.html">CN</a> </div>
-            <div class="col-lg-2 ml-auto text-center">
+            <div class="col-lg-1 ml-auto text-center">
               <a class="" href="indexFR.html";>FR</a> </div>
           </div> 
-
 
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#page-top">About</a>
+              <a class="nav-link js-scroll-trigger" href="#page-top">Acerca de</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#features">Features</a>
+              <a class="nav-link js-scroll-trigger" href="#features">Caracter&iacute;sticas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">Download</a>
+              <a class="nav-link js-scroll-trigger" href="#download">Descargas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#community">Community</a>
+              <a class="nav-link js-scroll-trigger" href="#community">Comunidad</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#tool">Tool</a>
+              <a class="nav-link js-scroll-trigger" href="#tool">Herramientas</a>
             </li>
           </ul>
         </div>
@@ -108,10 +108,10 @@
     <header class="masthead">
       <div class="header-content">
         <div class="header-content-inner">
-          <h1 id="homeHeading">The digital currency of the future For Every Human</h1>
+          <h1 id="homeHeading">La Moneda Digital para el futuro de la humanidad</h1>
           <hr>
-          <p>Electronic Dollar (or eDollar) is a private, secure, untraceable, decentralized digital currency. You are your bank, you control your funds, and nobody can trace your transfers unless you allow them to do so.</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#features">Find Out More</a>
+          <p>El Dolar Electr&oacute;nioc(o eDollar) es una crypto privada, segura, imposible de seguir, decentralizada. Usted es su propio Banco, controla sus fondos, y nadie puede rastrear sus transferencias, a menos que usted lo autorice.</p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#features">Conocer m&aacute;s</a>
         </div>
       </div>
     </header>
@@ -120,7 +120,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Features</h2>
+            <h2 class="section-heading">Caracter&iacute;sticas</h2>
             <hr class="primary">
           </div>
         </div>
@@ -130,29 +130,30 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-globe text-primary sr-icons"></i>
-              <h3>Decentralized</h3>
-              <p class="text-muted align-jstify">eDollar is decentralized, trustless cryptocurrency. The whole system is operated by peer-to-peer network, Transactions are confirmed by distributed consensus, and then recorded on the blockchain immutably </p>
+              <h3>Decentralizado</h3>
+              <p class="text-muted align-jstify">El eDollar es decentralizado, no requiere de intermediarios. Todo el sistema es operado por una red de igual a igual, las transacciones se confirman por un consenso distribuido y luego son registrada en la Cadena de Bloques de una manera inmutable</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-lock text-primary sr-icons"></i>
-              <h3>Secure</h3>
-              <p class="text-muted align-jstify">Using the power of a distributed peer-to-peer consensus network, every transaction on the network is cryptographically secured. Wallet files are encrypted with a passphrase to ensure they are useless if stolen</p>
+              <h3>Seguro</h3>
+              <p class="text-muted align-jstify">Usando el poder de una red distribuida de consenso de igual a igual, cada transacci&oacute;n en la red est&aacute; protegida criptogr&aacute;ficamente. Los archivos de cada billetera se cifran con una contrase&ntilde;a para garantizar que sean in&uacute;tiles en caso de robo</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-eye-slash text-primary sr-icons"></i>
-              <h3>Private</h3>
-              <p class="text-muted align-jstify">All transactions in eDollar are Ring Confidential Transactions (RingCT) with minimum ring size of 4. The amount of any transaction is always hidden to the public, and because blocks cannot be analyzed, without the keys no one can ever know where that money comes from</p>
+              <h3>Privado</h3>
+              <p class="text-muted align-jstify">
+Todas las transacciones de eDollar est&aacute;n protegidas por confidencialidad en anillo (RingCT) con un tama&ntilde;o de anillo m&iacute;nimo de 4. El monto de cualquier transacci&oacute;n siempre permanece oculto al p&uacute;blico, y debido a que los bloques no se pueden analizar sin las claves, nadie puede saber de d&oacute;nde proviene los fondos</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-times text-primary sr-icons"></i>
-              <h3>Untraceable</h3>
-              <p class="text-muted align-jstify">By taking advantage of ring signatures, a special property of a certain type of cryptography, eDollar is able to ensure that transactions are not only untraceable, but have an optional measure of ambiguity that ensures that transactions cannot be tied back to an individual user or computer</p>
+              <h3>Imposible de seguir</h3>
+              <p class="text-muted align-jstify">Al aprovechar las firmas en anillo -una propiedad especial de cierto tipo de criptograf&iacute;a- eDollar garantiza que las transacciones no s&oacute;lo son imposibles de rastrear, sino que adem&aacute;s tienen una medida de ambig&uuml;edad opcional que garantiza que las transacciones no puedan vincularse a un usuario o computadora.</p>
             </div>
           </div>
         </div>
@@ -162,11 +163,11 @@
     <section class="p-0" id="download">
       <div class="call-to-action bg-dark">
         <div class="container text-center">
-          <h2>Download GUI Wallet</h2>
-          <p>Current version 0.1.1 - The Mars</p>
+          <h2>Descargar Billetera de Interfase Gr&aacute;fica</h2>
+          <p>Versi&oacute;n Actual 0.1.1 - Marte</p>
           <div class="row">
             <div class="col-lg-4 ml-auto text-center">
-              <p class="small-margin"><span class="fa fa-windows small-margin"></span> For Windows</p>
+              <p class="small-margin"><span class="fa fa-windows small-margin"></span>Para Windows</p>
             </div>
             <div class="col-lg-4 ml-auto text-center">
               <a class="" href="https://edollar.cash/download/[Beta-3]eDollar_GUIWallet_Setup-64bit.exe">Windows 64 bits</a>
@@ -177,35 +178,35 @@
           </div>
           <div class="row">
               <div class="col-lg-12 ml-auto text-center">
-                <p class="small-margin"><span class="fa fa-linux small-margin"></span> <span class="fa fa-apple"></span> Other platforms: <i>coming soon</i></p>
+                <p class="small-margin"><span class="fa fa-linux small-margin"></span> <span class="fa fa-apple"></span> Otras platformas: <i>Pr&oacute;ximamente</i></p>
               </div>
           </div>
           <br><br>
-          <h2>Download Binaries/CLI</h2>
-          <p>Current version 0.1.1 - The Mars</p>
+          <h2>Descargar Binarios/CLI</h2>
+          <p>Versi&oacute;n Actual 0.1.1 - Marte</p>
           <div class="row">
             <div class="col-lg-4 ml-auto text-center">
-              <p class="small-margin"><span class="fa fa-windows small-margin"></span> For Windows</p>
+              <p class="small-margin"><span class="fa fa-windows small-margin"></span> Para Windows</p>
               <a class="" href="https://edollar.cash/download/edollar-win64.zip">Windows 64 bits</a>
               <br>
               <a class="" href="https://edollar.cash/download/edollar-win32.zip">Windows 32 bits</a>
             </div>
             <div class="col-lg-4 ml-auto text-center">
-              <p class="small-margin"><span class="fa fa-linux small-margin"></span> For Linux</p>
+              <p class="small-margin"><span class="fa fa-linux small-margin"></span> Para Linux</p>
               <a class="" href="https://edollar.cash/download/edollar-linux64.zip">Ubuntu 64 bits</a>
             </div>
             <div class="col-lg-4 ml-auto text-center">
               <p class="small-margin"><span class="fa fa-apple"></span> For Mac</p>
-              <a class="" href="https://edollar.cash/download/edollar-mac">Coming soon</a>
+              <a class="" href="https://edollar.cash/download/edollar-mac">Pr&oacute;ximamente</a>
               </div>
           </div>
-          <h2 style="margin-top: 50px">Source code and White papers</h2>
+          <h2 style="margin-top: 50px">C&oacute;digo Fuente y Libro Blanco</h2>
           <div class="row">
             <div class="col-lg-6 ml-auto">
-              <span class="fa fa-github"></span> Source code: <a class="" target="_blank" href="https://github.com/edollar-project/edollar"> From Github</a>
+              <span class="fa fa-github"></span> C&oacute;digo Fuente: <a class="" target="_blank" href="https://github.com/edollar-project/edollar"> From Github</a>
             </div>
             <div class="col-lg-6 ml-auto">
-              <span class="fa fa-file-pdf-o"></span> White paper: <a class="" target="_blank" href="https://edollar.cash/download/EDLWPEN	.pdf"> EDL white paper</a>
+              <span class="fa fa-file-pdf-o"></span> Libro Blanco: <a class="" target="_blank" href="https://edollar.cash/download/EDLWPSP.pdf"> Libro Blanco de EDL</a>
             </div>
           </div>
         </div>
@@ -216,16 +217,16 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">More about eDollar</h2>
+            <h2 class="section-heading">M&aacute;s informaci&oacute;n sobre eDollar</h2>
             <hr class="primary">
-            <p>You can find more information about eDollar project via the following channels</p>
+            <p>Puede encontrar m&aacute;s informaci&oacute;n sobre el proyecto eDollar a trav&eacute;s de los siguientes canales</p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-3 mr-auto text-center">
             <i class="fa fa-question-circle-o fa-3x"></i>
             <p>
-		<a target="_blank" href="rpc_guide.html">RPC Guide</a>
+		<a target="_blank" href="rpc_guide.html">Gu&iacute;a RPC</a>
             </p>
           </div>
           <div class="col-lg-3 ml-auto text-center">
@@ -253,31 +254,31 @@
   <div class="container">
     <div class="row">
         <div class="col-lg-4 text-center">
-          <i class="fa fa-anchor tool"> Mining Pool</i>
+          <i class="fa fa-anchor tool">Pool de Miner&iacute;a</i>
           <p class="tool-item">
-            <a target="_blank" href="http://pool.electronicdollar.org/" class="white-color">Official pool (1)</a>
+            <a target="_blank" href="http://pool.electronicdollar.org/" class="white-color">Pool Oficial (1)</a>
           </p>
           <p class="tool-item"p>
-            <a target="_blank" href="https://pool.edollar.cash" class="white-color">Official pool (2)</a>
+            <a target="_blank" href="https://pool.edollar.cash" class="white-color">Pool Oficial (2)</a>
             </p>
           </p>
           <p class="tool-item">
-            <a target="_blank" href="https://pool.edollar.cash" class="white-color">Other pools</a>
+            <a target="_blank" href="https://pool.edollar.cash" class="white-color">Otros Pool</a>
           </p>
         </div>
         <div class="col-lg-4 text-center">
-          <i class="fa fa-cubes tool"> Block Explorer</i>
+          <i class="fa fa-cubes tool"> Explorador de Bloques</i>
           <p class="tool-item">
             <a target="_blank" href="https://explorer.edollar.cash" class="white-color">https://explorer.edollar.cash</a>
           </p>
         </div>
         <div class="col-lg-4 text-center">
-            <i class="fa fa-address-card-o tool"> Generate Wallet</i>
+            <i class="fa fa-address-card-o tool"> Generar Billetera</i>
             <p class="tool-item">
-              <a target="_blank" href="https://edollar.cash/wallet_generator.html" class="white-color">Generate Online</a>
+              <a target="_blank" href="https://edollar.cash/wallet_generator.html" class="white-color">Generar En L&iacute;nea</a>
             </p>
             <p class="tool-item">
-                <a target="_blank" href="https://github.com/edollar-project/edollar-wallet-generator" class="white-color">Generate Offline</a>
+                <a target="_blank" href="https://github.com/edollar-project/edollar-wallet-generator" class="white-color">Generar Fuera de L&iacute;nea</a>
               </p>
           </div>
     </div>
