First five multilingual homepages
Including Richard Barrow´s market picture

--- a/indexPT.html
+++ b/indexPT.html
@@ -89,7 +89,7 @@
               <a class="nav-link js-scroll-trigger" href="#page-top">Sobre</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#features">Caracter&Iacute;sticas</a>
+              <a class="nav-link js-scroll-trigger" href="#features">Caracter&iacute;sticas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#download">Baixar</a>
@@ -98,7 +98,7 @@
               <a class="nav-link js-scroll-trigger" href="#community">Comunidade</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#tool">Ferramenta</a>
+              <a class="nav-link js-scroll-trigger" href="#tool">Ferramentas</a>
             </li>
           </ul>
         </div>
@@ -120,7 +120,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Caracter&Iacute;sticas</h2>
+            <h2 class="section-heading">Caracter&iacute;sticas</h2>
             <hr class="primary">
           </div>
         </div>
@@ -131,28 +131,28 @@
             <div class="service-box">
               <i class="fa fa-4x fa-globe text-primary sr-icons"></i>
               <h3>Descentralizado</h3>
-              <p class="text-muted align-jstify">O eDollar &eacute; criptomoeda descentralizada e sem confian&#231a. Todo o sistema &eacute; operado por rede peer-to-peer, Transa&#231es s&#227o confirmadas por consenso distribu&Iacute;do e, em seguida, gravadas no blockchain imutavelmente</p>
+              <p class="text-muted align-jstify">O eDollar &eacute; criptomoeda descentralizada e sem confian&#231a. Todo o sistema &eacute; operado por rede peer-to-peer, transa&#231&#245es s&#227o confirmadas por consenso distribu&iacute;do e, em seguida, gravadas no blockchain imutavelmente</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-lock text-primary sr-icons"></i>
               <h3>Seguro</h3>
-              <p class="text-muted align-jstify">Usando o poder de uma rede de consenso peer-to-peer distribu&Iacute;da, todas as transa&#231&#234es na rede s&#227o protegidas criptograficamente. Os arquivos da carteira s&#227o criptografados com uma senha para garantir que eles sejam in&uacute;teis se forem roubados</p>
+              <p class="text-muted align-jstify">Usando o poder de uma rede de consenso peer-to-peer distribu&iacute;da, todas as transa&#231&#245es na rede s&#227o protegidas criptograficamente. Os arquivos da carteira s&#227o criptografados com uma senha para garantir que eles sejam in&uacute;teis se forem roubados</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-eye-slash text-primary sr-icons"></i>
               <h3>Privado</h3>
-              <p class="text-muted align-jstify">Todas as transa&#231&#234es no eDollar s&#227o Ring Ring Confidential Transactions (RingCT) com tamanho de anel m&Iacute;nimo de 4. A quantidade de qualquer transa&#231&#227o &eacute; sempre escondida para o p&uacute;blico, e porque os blocos n&#227o podem ser analisados, sem as chaves ningu&eacute;m pode saber de onde vem esse dinheiro</p>
+              <p class="text-muted align-jstify">Todas as transa&#231&#245es no eDollar s&#227o Ring Confidential Transactions (RingCT) com tamanho de anel m&iacute;nimo de 4. A quantidade de qualquer transa&#231&#227o &eacute; sempre escondida para o p&uacute;blico, e porque os blocos n&#227o podem ser analisados, sem as chaves ningu&eacute;m pode saber de onde vem esse dinheiro</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-times text-primary sr-icons"></i>
               <h3>N&#227o Rastre&aacute;vel</h3>
-              <p class="text-muted align-jstify">Aproveitando-se das assinaturas de anel, uma propriedade especial de um determinado tipo de criptografia, o eDollar &eacute; capaz de garantir que as transa&#231&#234es n&#227o sejam apenas imposs&Iacute;veis de rastrear, mas tenham uma medida opcional de ambiguidade que garanta que as transa&#231&#234es n&#227o possam ser vinculadas a um usu&aacute;rio individual ou computador.</p>
+              <p class="text-muted align-jstify">Aproveitando-se das assinaturas de anel, uma propriedade especial de um determinado tipo de criptografia, o eDollar &eacute; capaz de garantir que as transa&#231&#245es n&#227o sejam apenas imposs&iacute;veis de rastrear, mas tenham uma medida opcional de ambiguidade que garanta que as transa&#231&#245es n&#227o possam ser vinculadas a um usu&aacute;rio individual ou computador.</p>
             </div>
           </div>
         </div>
@@ -205,7 +205,7 @@
               <span class="fa fa-github"></span> C&oacute;digo-fonte: <a class="" target="_blank" href="https://github.com/edollar-project/edollar"> From Github</a>
             </div>
             <div class="col-lg-6 ml-auto">
-              <span class="fa fa-file-pdf-o"></span>Papel Branco <a class="" target="_blank" href="https://edollar.cash/download/EDLWPEN	.pdf"> Papel Branco  do EDL </a>
+              <span class="fa fa-file-pdf-o"></span> Papel Branco <a class="" target="_blank" href="https://edollar.cash/download/EDL2WPEN.pdf"> Papel Branco  do EDL </a>
             </div>
           </div>
         </div>
@@ -218,7 +218,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Mais sobre eDollar</h2>
             <hr class="primary">
-            <p>Voc&#234 pode encontrar mais informa&#231&#234es sobre o projeto eDollar atrav&eacute;s dos seguintes canais</p>
+            <p>Voc&#234 pode encontrar mais informa&#231&#227o sobre o projeto eDollar atrav&eacute;s dos seguintes canais</p>
           </div>
         </div>
         <div class="row">
@@ -283,7 +283,7 @@ Conversa de Bitcoin</a>
           </div>
     </div>
   </div>
-  <div class="copy-right">copyright © 2017 eDollar project</div>
+  <div class="copy-right">copyright Â© 2019 eDollar project</div>
   
 </div>
     <!-- Bootstrap core JavaScript -->
