--- a/indexSP.html
+++ b/indexSP.html
@@ -206,7 +206,7 @@ Todas las transacciones de eDollar est&aacute;n protegidas por confidencialidad 
               <span class="fa fa-github"></span> C&oacute;digo Fuente: <a class="" target="_blank" href="https://github.com/edollar-project/edollar"> From Github</a>
             </div>
             <div class="col-lg-6 ml-auto">
-              <span class="fa fa-file-pdf-o"></span> Libro Blanco: <a class="" target="_blank" href="https://edollar.cash/download/EDLWPSP.pdf"> Libro Blanco de EDL</a>
+              <span class="fa fa-file-pdf-o"></span> Libro Blanco: <a class="" target="_blank" href="https://edollar.cash/download/EDL2WPEN.pdf"> Libro Blanco de EDL</a>
             </div>
           </div>
         </div>
@@ -283,7 +283,7 @@ Todas las transacciones de eDollar est&aacute;n protegidas por confidencialidad 
           </div>
     </div>
   </div>
-  <div class="copy-right">copyright © 2017 eDollar project</div>
+  <div class="copy-right">copyright Â© 2019 eDollar project</div>
   
 </div>
     <!-- Bootstrap core JavaScript -->
