--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
               <span class="fa fa-github"></span> Source code: <a class="" target="_blank" href="https://github.com/edollar-project/edollar"> From Github</a>
             </div>
             <div class="col-lg-6 ml-auto">
-              <span class="fa fa-file-pdf-o"></span> White paper: <a class="" target="_blank" href="https://edollar.cash/download/EDLWPEN	.pdf"> EDL white paper</a>
+              <span class="fa fa-file-pdf-o"></span> White paper: <a class="" target="_blank" href="https://edollar.cash/download/EDL2WPEN.pdf"> EDL white paper</a>
             </div>
           </div>
         </div>
@@ -282,7 +282,7 @@
           </div>
     </div>
   </div>
-  <div class="copy-right">copyright © 2017 eDollar project</div>
+  <div class="copy-right">copyright © 2019 eDollar project</div>
   
 </div>
     <!-- Bootstrap core JavaScript -->
